--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWOPRD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker login -u $DOCKER_USERNAME --password-stdin $DOCKER_PASSWORD
+          docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
 
       # Runs a single command using the runners shell
       - name: Docker build C#
