--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,9 +27,9 @@ jobs:
       - name: docker login
         env: 
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWOPRD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       # Runs a single command using the runners shell
       - name: Docker build C#
