--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.4"
 services:
   csharp: #docker run --rm -it -v ${PWD}:/work -w /work -p 5000:5000 aimvector/csharp:1.0.0 /bin/sh
     container_name: csharp
-    image: aimvector/csharp:1.0.0
+    image: alexmandi/csharp:1.0.0
     build:
       context: ./c#
       target: debug
