--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.4"
 services:
-  csharp: #docker run --rm -it -v ${PWD}:/work -w /work -p 5000:5000 aimvector/csharp:1.0.0 /bin/sh
+  csharp: #docker run --rm -it -v ${PWD}:/work -w /work -p 5000:5000 alexmandi/csharp:1.0.0 /bin/sh
     container_name: csharp
     image: alexmandi/csharp:1.0.0
     build:
@@ -10,9 +10,9 @@ services:
     - ./c#/src/:/work/
     ports:
       - 5000:5000
-  golang: #docker run --rm -it -v ${PWD}:/go/src/work -v ${PWD}/golang/configs/:/configs -v ${PWD}/golang/secrets/:/secrets  -p 5001:5000 -p 2345:2345 --security-opt "seccomp:unconfined" aimvector/golang:1.0.0
+  golang: #docker run --rm -it -v ${PWD}:/go/src/work -v ${PWD}/golang/configs/:/configs -v ${PWD}/golang/secrets/:/secrets  -p 5001:5000 -p 2345:2345 --security-opt "seccomp:unconfined" alexmandi/golang:1.0.0
     container_name: golang
-    image: aimvector/golang:1.0.0
+    image: alexmandi/golang:1.0.0
     build: 
       context: ./golang
       target: prod
@@ -25,9 +25,9 @@ services:
       - 2345:2345
     security_opt:
       - "seccomp:unconfined"
-  python: #docker run --rm -it -v ${PWD}:/work -w /work -p 5003:5000 aimvector/python:1.0.0 /bin/sh
+  python: #docker run --rm -it -v ${PWD}:/work -w /work -p 5003:5000 alexmandi/python:1.0.0 /bin/sh
     container_name: python
-    image: aimvector/python:1.0.0
+    image: alexmandi/python:1.0.0
     build:
       context: ./python
       target: debug
@@ -42,7 +42,7 @@ services:
       - 5678:5678
   nodejs: #docker run --rm -it -v ${PWD}:/work -w /work -p 5002:5000 aimvector/nodejs:1.0.0 /bin/sh
     container_name: nodejs
-    image: aimvector/nodejs:1.0.0
+    image: alexmandi/nodejs:1.0.0
     build:
       context: ./nodejs
       target: debug
@@ -57,7 +57,7 @@ services:
       - 9229:9229            #debug port
   spring-java: #docker run --rm -it -v ${PWD}:/work -w /work -p 5002:5000 aimvector/nodejs:1.0.0 /bin/sh
     container_name: spring-java
-    image: aimvector/spring-java:1.0.0
+    image: alexmandi/spring-java:1.0.0
     build:
       context: ./springboot/java/
       target: debug
